Add Auth0 authentication integration and update environment variables

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.8.0",
+    "@auth0/nextjs-auth0": "^4.11.0",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
