--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
 API_ENDPOINT=https://api.example.com
+
+NEXT_PUBLIC_AUTH0_DOMAIN={{YOUR_AUTH0_DOMAIN}}
+NEXT_PUBLIC_AUTH0_CLIENT_ID={{YOUR_AUTH0_CLIENT_ID}}
+NEXT_PUBLIC_AUTH0_REDIRECT_URI=http://localhost:3000/redirect
+# NEXT_PUBLIC_AUTH0_ORGANIZATION={{YOUR_AUTH0_ORGANIZATION}} # Optional
