--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@auth0/auth0-react": "^2.8.0",
     "@auth0/nextjs-auth0": "^4.13.1",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/oxide-darwin-arm64": "^4.1.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lightningcss-darwin-arm64": "^1.30.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
